--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,17 @@ edition = "2021"
 [dependencies]
 anyhow = "1"
 indexmap = "2"
+serde = "1"
+serde_json = "1"
 bytes = "1"
 futures = "0.3"
 tokio = { version = "1", features = [
     "rt",
     "macros",
     "io-util",
+    "net",
     "time",
     "sync",
     "process",
 ] }
+libc = "0.2"
