--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1"
 indexmap = "2"
 serde = "1"
 serde_json = "1"
+clap = { version = "4", features = ["derive"] }
 bytes = "1"
 futures = "0.3"
 tokio = { version = "1", features = [
