--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ indexmap = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 clap = { version = "4", features = ["derive"] }
+pin-project = "1"
 async-trait = "0.1"
 bytes = "1"
 futures = "0.3"
