--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,11 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1"
+chrono = "0.4"
 indexmap = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+log = { version = "0.4", features = ["std"] }
 clap = { version = "4", features = ["derive"] }
 pin-project = "1"
 async-trait = "0.1"
