--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1"
+thiserror = "1"
 chrono = "0.4"
 indexmap = "2"
 serde = { version = "1", features = ["derive"] }
