--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 log = { version = "0.4", features = ["std"] }
 clap = { version = "4", features = ["derive"] }
+home = "0.5"
 pin-project = "1"
 async-trait = "0.1"
 bytes = "1"
