--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "petri"
 version = "0.1.0"
 edition = "2021"
 
+[profile.release]
+strip = true
+opt-level = 3
+lto = true
+panic = "abort"
+codegen-units = 1
+
 [dependencies]
 anyhow = "1"
 thiserror = "1"
