Write panic info to logs when the server process panicked

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "petri"
 version = "0.1.0"
 edition = "2021"
 
+[profile.dev]
+panic = "abort"
+
 [profile.release]
 strip = true
 opt-level = 3
