Implement log rotation

--- a/crates/petri/Cargo.toml
+++ b/crates/petri/Cargo.toml
@@ -15,9 +15,10 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 log = { workspace = true, features = ["std"] }
 clap = { workspace = true, features = ["derive"] }
+once_cell = "1.18"
 home = "0.5"
 libc = "0.2"
 
 [dependencies.tokio]
 workspace = true
-features = ["rt", "macros", "io-util", "net", "sync"]
+features = ["rt", "macros", "io-util", "net", "sync", "time"]
