--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ color-print = "0.3"
 indexmap = "2"
 log = "0.4"
 pin-project-lite = "0.2"
+parking_lot = "0.12"
 serde = "1"
 serde_json = "1"
 tokio = "1"
