--- a/crates/petri/Cargo.toml
+++ b/crates/petri/Cargo.toml
@@ -16,6 +16,7 @@ serde_json = { workspace = true }
 log = { workspace = true, features = ["std"] }
 clap = { workspace = true, features = ["derive"] }
 once_cell = "1.18"
+parking_lot = { workspace = true }
 home = "0.5"
 libc = "0.2"
 
