Add log file rotation for process outputs

--- a/crates/petri-core/Cargo.toml
+++ b/crates/petri-core/Cargo.toml
@@ -11,3 +11,4 @@ anyhow = { workspace = true }
 indexmap = { workspace = true }
 log = { workspace = true }
 tokio = { workspace = true, features = ["process"] }
+parking_lot = { workspace = true }
