--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ indexmap = "2"
 log = "0.4"
 pin-project-lite = "0.2"
 parking_lot = "0.12"
+sha1 = "0.10"
 serde = "1"
 serde_json = "1"
 tokio = "1"
