Implement job creation
* Add `-j` flag for `run` command.
* Add job-related things for `ps` command.
* Fix hex format in the generation of jid.
* Some code refactoring.

--- a/crates/petri-control/Cargo.toml
+++ b/crates/petri-control/Cargo.toml
@@ -9,6 +9,7 @@ petri-core = { path = "../petri-core" }
 petri-utils = { path = "../petri-utils" }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
+chrono = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 color-print = { workspace = true }
 log = { workspace = true }
