--- a/crates/petri-core/Cargo.toml
+++ b/crates/petri-core/Cargo.toml
@@ -9,6 +9,7 @@ petri-logger = { path = "../petri-logger" }
 petri-utils = { path = "../petri-utils" }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
+chrono = { workspace = true }
 indexmap = { workspace = true }
 sha1 = { workspace = true }
 log = { workspace = true }
